# tokimo-app-video

./: .gitignore  BLOCKERS.md  Cargo.toml  clippy.toml  lefthook.yml  tokimo-app.toml
.github/workflows/: ci.yml
src/: app_server.rs  assets.rs  cli.rs  config.rs  error.rs  main.rs  mod.rs  router.rs  state.rs
src/apps/: mod.rs
src/apps/docs/services/: markdown_sync.rs  mod.rs
src/apps/media_organize/: mod.rs  router.rs
src/apps/media_organize/handlers/: mod.rs
src/apps/media_organize/services/: mod.rs
src/apps/photo/: mod.rs
src/apps/photo/repos/: mod.rs
src/apps/subscriptions/: mod.rs  router.rs
src/apps/subscriptions/handlers/: mod.rs  pt_sites.rs  subscription.rs  subscription_filter.rs  traffic_manage.rs
src/apps/subscriptions/models/: mod.rs  pt_site.rs
src/apps/subscriptions/repos/: mod.rs  pt_site_repo.rs  subscription_filter_repo.rs  subscription_repo.rs  traffic_manage_repo.rs
src/apps/subscriptions/services/: mod.rs  pt_search.rs  pt_user_info.rs
src/bus_clients/: app_events.rs  auth.rs  downloader.rs  jobs.rs  mod.rs  person.rs  playback_state.rs  vfs.rs
src/bus_services/: downloader.rs  mod.rs  video_jobs.rs
src/db/: datetime.rs  mod.rs  pagination.rs
src/db/entities/: agent_scheduled_triggers.rs  ai_agents.rs  ai_conversations.rs  ai_message_attachments.rs  ai_messages.rs  ai_runs.rs  album_genres.rs  api_keys.rs  book_chapters.rs  book_collections.rs  book_files.rs  book_genres.rs  book_items.rs  book_volumes.rs  books.rs  channel_user_conversations.rs  channel_webpush_subscriptions.rs  channels.rs  chapters.rs  collections.rs  desktop_items.rs  docs_node_comments.rs  docs_node_meta.rs  docs_node_view_states.rs  docs_spaces.rs  docs_whiteboard_user_libraries.rs  download_clients.rs  download_records.rs  episodes.rs  file_favorites.rs  genres.rs  inbox_notifications.rs  job_type_suspensions.rs  jobs.rs  mail_accounts.rs  mail_attachments.rs  mail_folders.rs  mail_messages.rs  match_histories.rs  media_arts.rs  (+61 more)
src/db/models/: job.rs  mod.rs  playback.rs  subtitle.rs  video.rs
src/db/models/media/: file.rs  mod.rs  vfs.rs
src/db/repos/: auth_repo.rs  book_repo.rs  download_record_repo.rs  job_repo.rs  media_playback_state_repo.rs  mod.rs  online_media_auth_settings_repo.rs  organize_report_repo.rs  scrape_settings_repo.rs  subtitle_repo.rs  system_config_repo.rs  ytdlp_provider_auth_repo.rs
src/db/repos/media/: file_repo.rs  media_content_repo.rs  mod.rs  music_repo.rs  playback_repo.rs  playback_session_repo.rs  vfs_repo.rs  video_repo.rs
src/handlers/: browse.rs  crud.rs  file_stream.rs  hls.rs  image_proxy.rs  iso_reader.rs  iso_reader_stub.rs  jellyfin.rs  mod.rs  online_media.rs  playback.rs  playback_state.rs  subtitle.rs  subtitle_events.rs  sync.rs  udfread_ffi.rs  user.rs  ytdlp.rs
src/handlers/media/: mod.rs  stream.rs  utils.rs
src/handlers/vfs/ops/: mod.rs  types.rs  walk.rs
src/queue/: cancellation.rs  mod.rs  online_media_download.rs  person_sync.rs  priority.rs  tmdb_person_scrape.rs  tv_scrape.rs  video_item_scrape.rs
src/queue/handlers/: file_scrape.rs  media_file_ffprobe.rs  mod.rs
src/services/: app_sync.rs  common.rs  mod.rs  nfo_parser.rs  stream_session.rs
src/services/downloads/: log_bus.rs  mod.rs
src/services/media/: mod.rs
src/services/scrape/: mod.rs  online_video.rs  tv.rs  video_item.rs
src/services/scrape/shared/: artwork.rs  constants.rs  episode_screenshot.rs  lib_type.rs  media_file.rs  mod.rs  parse.rs  subtitle.rs  tmdb.rs
src/services/source/: mod.rs  path.rs  storage_driver.rs  support.rs
src/services/storage/: mod.rs  opendal_provider.rs  types.rs
ui/: .pnpmfile.cjs  package.json  pnpm-lock.yaml  tsconfig.json
ui/src/: VideoLibraryEditor.tsx  _old-manifest.ts  index.tsx  manifest.ts  modal-bridge.ts  player-extension.tsx  player-source-metadata.ts
ui/src-pending-migration/components/: ActiveLibraryContext.tsx  AddOnlineMediaWindow.tsx  VideoMenuBar.tsx
ui/src-pending-migration/detail-pages/: media-detail-shared.tsx
ui/src-pending-migration/viewers/video/: FileProbePanel.tsx  manifest.ts
ui/src/api/: hooks.ts  index.ts  types.ts  video-client.ts
ui/src/components/: ActiveLibraryContext.tsx  AddOnlineMediaModal.tsx  AddOnlineMediaWindow.tsx  AppIcon.tsx  DownloadEngineSettingsWindow.tsx  EpisodeListMenu.tsx  MediaFilterPanel.tsx  MediaMenuBar.tsx  PersonDetailModal.tsx  PersonDetailPopover.tsx  TmdbSettingsWindow.tsx  VideoApp.tsx  VideoContent.tsx  VideoLibraryEditorWindow.tsx  VideoMenuBar.tsx  VideoSettingsModal.tsx  VideoSidebar.tsx  WatchHistoryTable.tsx  player-controls-shared.tsx
ui/src/detail-pages/: MediaOrganizePage.tsx  MovieDetailPage.tsx  TvShowDetailPage.tsx  VideoItemDetailPage.tsx  media-detail-layout.tsx  media-detail-shared.tsx
ui/src/hooks/: shell-stubs.ts  useAdultMode.ts  useContainerWidth.ts  useSidebarCollapsed.ts  useVideoLibraryProgress.ts
ui/src/i18n/: en-US.ts  index.ts  ja-JP.ts  zh-CN.ts
ui/src/lib/: media-organize.ts
ui/src/router/: route-matcher.ts  useVideoNav.ts  views.ts
ui/src/shared/: providers.tsx
ui/src/shell-shim/: README.md  api.ts  apps-finder.ts  apps-media-organize.ts  apps-media.ts  apps-settings.ts  apps-video-library-editor.ts  components.ts  lib.ts  shared.ts  system-window-types.ts  system.ts  types-avatar.ts  types.ts
ui/src/video-library/: StorageBindingForm.tsx  VideoBindingsField.tsx  VideoOrganizeFields.tsx  VideoTypeSelector.tsx  organize-constants.ts  organize-samples.ts  video-types.ts
ui/src/viewers/video/: FileProbePanel.tsx  VideoViewer.tsx  manifest.ts
ui/src/viewers/video/player/: Ac3AudioPlayer.ts  CustomVideoControls.tsx  PlayerSeekBar.tsx  VideoPlayer.tsx  VideoPlayerTitleBar.tsx  VideoStatsPanel.tsx  player-controls-shared.tsx  useVideoEngine.ts  useVideoEvents.ts
ui/src/viewers/video/subtitle/: PgsCanvasRenderer.ts  SubtitleCustomOverlay.tsx  SubtitleMenu.tsx  SubtitlePickerModal.tsx  SubtitleStreamLoader.ts  SubtitleStyleSettingsForm.tsx  pgs-parser.ts  useSubtitleManager.ts
