[package]
name        = "tokimo-app-video"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Tokimo video app — library / playback / scraping / Jellyfin adapter (sidecar process)."
repository  = "https://github.com/tokimo-lab/tokimo-app-video"

[dependencies]
# Tokimo bus (independent submodule repo, git rev pinned — matches helloworld范式)
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "6bc835c0c8890089b18e63cbe5c0562779a88f7e" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "6bc835c0c8890089b18e63cbe5c0562779a88f7e", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "6bc835c0c8890089b18e63cbe5c0562779a88f7e", features = ["axum", "cli-db"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "6bc835c0c8890089b18e63cbe5c0562779a88f7e" }

# Workspace path deps — packages 暂时 path 引用主仓 (dashcam 范式). 等独立仓库化后切 git rev pin.
# 格式：每行末尾标 OWNER (谁负责) + DEADLINE (满足什么条件后切 git pin).
# 通用 DEADLINE：包提取为独立 GitHub repo 并发布 v0.1.0 后，本仓切 git rev pin 锁版本.
tokimo-vfs            = { path = "../../packages/tokimo-package-vfs/packages/fs" }            # OWNER: vfs-team        | DEADLINE: tokimo-package-vfs 独立仓库化 + 锁 v0.1.0
tokimo-vfs-core       = { path = "../../packages/tokimo-package-vfs/packages/core" }          # OWNER: vfs-team        | DEADLINE: 同 tokimo-vfs
tokimo-vfs-op         = { path = "../../packages/tokimo-package-vfs/packages/op" }            # OWNER: vfs-team        | DEADLINE: 同 tokimo-vfs
tokimo-package-hls    = { path = "../../packages/tokimo-package-hls" }                        # OWNER: media-team      | DEADLINE: HLS session API 稳定 + 独立仓库化
tokimo-package-subtitle = { path = "../../packages/tokimo-package-subtitle" }                 # OWNER: media-team      | DEADLINE: 字幕解析格式覆盖完整后独立仓库化
tokimo-package-image  = { path = "../../packages/tokimo-package-image" }                      # OWNER: media-team      | DEADLINE: 缩略图/EXIF API 稳定 + 独立仓库化
tokimo-package-iso    = { path = "../../packages/tokimo-package-iso" }                        # OWNER: media-team      | DEADLINE: ISO/BDMV 解析稳定 + 独立仓库化
tokimo-package-ffmpeg = { path = "../../packages/tokimo-package-ffmpeg" }                     # OWNER: media-team      | DEADLINE: rsmpeg 适配层稳定 + 独立仓库化
rust-online-media-ingest = { path = "../../packages/rust-online-media-ingest" }               # OWNER: ingest-team     | DEADLINE: 抓取源接入完成（YouTube/Bili/...）+ 独立仓库化
rust-subtitle-download = { path = "../../packages/rust-subtitle-download" }                   # OWNER: media-team      | DEADLINE: 字幕源聚合 API 冻结 + 独立仓库化

# Standard deps
clap              = { version = "4", features = ["derive", "env"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process", "io-util", "sync", "fs"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
dashmap             = { workspace = true }
uuid               = { version = "1", features = ["v4", "v7", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
sea-orm            = { version = "2.0.0-rc.37", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "macros"] }
sea-query          = "1.0.0-rc"
rust-embed         = { version = "8", features = ["debug-embed"] }
mime_guess         = "2"
anyhow             = "1"
axum               = { version = "0.8", features = ["json", "ws"] }
reqwest            = { workspace = true, features = ["stream", "multipart", "gzip", "brotli"] }
futures            = "0.3"
futures-util       = "0.3"
async-stream       = "0.3"
bytes              = "1"
lofty              = "0.21"
thiserror          = "1"
url                = "2"
percent-encoding   = "2"
regex              = "1"
quick-xml          = { version = "0.36", features = ["serialize"] }
mime               = "0.3"
ts-rs              = { version = "12", features = ["serde-json-impl", "uuid-impl", "chrono-impl"] }
base64             = "0.22"
hex                = { workspace = true }
hmac               = { workspace = true }
sha2               = { workspace = true }
rand               = { workspace = true }
tokio-util         = { workspace = true, features = ["io"] }
async-trait        = "0.1"
rust-client-api    = { path = "../../packages/rust-client-api" }                              # OWNER: client-api-team | DEADLINE: TMDB/OMDb/Douban/Bangumi 客户端 API 稳定 + 独立仓库化
tower              = { version = "0.5" }
tower-http         = { version = "0.6", features = ["fs"] }
tokimo-jellyfin-api = { path = "../../packages/tokimo-jellyfin-api" }                         # OWNER: media-team      | DEADLINE: Jellyfin adapter API 稳定 + 独立仓库化
libc               = "0.2"
opendal            = { version = "0.55", features = ["services-fs"] }

[profile.release]
lto       = "thin"
opt-level = 3
strip     = "symbols"
