[package]
name        = "tokimo-app-video"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Tokimo video app — library / playback / scraping / Jellyfin adapter (sidecar process)."
repository  = "https://github.com/tokimo-lab/tokimo-app-video"

[dependencies]
# Tokimo bus (independent submodule repo, git rev pinned — matches helloworld范式)
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "6bc835c0c8890089b18e63cbe5c0562779a88f7e" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "6bc835c0c8890089b18e63cbe5c0562779a88f7e", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "6bc835c0c8890089b18e63cbe5c0562779a88f7e", features = ["axum", "cli-db"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "6bc835c0c8890089b18e63cbe5c0562779a88f7e" }

# Public packages — git pinned (独立仓库已开源)
tokimo-vfs            = { git = "https://github.com/tokimo-lab/tokimo-package-vfs.git", rev = "17e3c7a9" }
tokimo-vfs-core       = { git = "https://github.com/tokimo-lab/tokimo-package-vfs.git", rev = "17e3c7a9" }
tokimo-vfs-op         = { git = "https://github.com/tokimo-lab/tokimo-package-vfs.git", rev = "17e3c7a9" }
tokimo-package-hls    = { git = "https://github.com/tokimo-lab/tokimo-package-hls.git", rev = "6c64e13d7ee216e401fd62196d6e2eb568681b86" }
tokimo-package-subtitle = { git = "https://github.com/tokimo-lab/tokimo-package-subtitle.git", rev = "399e77ea" }
tokimo-package-image  = { git = "https://github.com/tokimo-lab/tokimo-package-image.git", rev = "0a651eb7" }
tokimo-package-ffmpeg = { git = "https://github.com/tokimo-lab/tokimo-package-ffmpeg.git", rev = "9ea65ce9" }
tokimo-package-utils  = { git = "https://github.com/tokimo-lab/tokimo-package-utils.git", rev = "30d2fe36" }

# Standard deps
clap              = { version = "4", features = ["derive", "env"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process", "io-util", "sync", "fs"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_with         = "3"
dashmap             = "6"
moka               = { version = "0.12", features = ["future"] }
uuid               = { version = "1", features = ["v4", "v7", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
sea-orm            = { version = "2.0.0-rc.37", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "macros"] }
sea-query          = "1.0.0-rc"
rust-embed         = { version = "8", features = ["debug-embed"] }
mime_guess         = "2"
anyhow             = "1"
axum               = { version = "0.8", features = ["json", "ws"] }
reqwest            = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "multipart", "gzip", "brotli"] }
futures            = "0.3"
futures-util       = "0.3"
async-stream       = "0.3"
bytes              = "1"
lofty              = "0.21"
thiserror          = "1"
url                = "2"
percent-encoding   = "2"
regex              = "1"
quick-xml          = { version = "0.36", features = ["serialize"] }
mime               = "0.3"
ts-rs              = { version = "12", features = ["serde-json-impl", "uuid-impl", "chrono-impl"] }
base64             = "0.22"
hex                = "0.4"
hmac               = "0.13"
sha2               = "0.11"
rand               = "0.9"
tokio-util         = { version = "0.7", features = ["io"] }
async-trait        = "0.1"
tokimo-media-scraper = { git = "https://github.com/tokimo-lab/tokimo-package-media-scraper.git", rev = "b124c1c" }
tokimo-media-ingest   = { git = "https://github.com/tokimo-lab/tokimo-package-media-ingest.git", rev = "a45c054" }
tokimo-downloader-bridge    = { git = "https://github.com/tokimo-lab/tokimo-package-downloader-bridge.git", rev = "1212cc7" }
tokimo-media-server-bridge  = { git = "https://github.com/tokimo-lab/tokimo-package-media-server-bridge.git", rev = "c3e771b" }
tokimo-pt-search            = { git = "https://github.com/tokimo-lab/tokimo-package-pt-search.git", rev = "8adfaf4b7a5ff322835e46960052d5087c16c12b" }
tokimo-subtitle-search      = { git = "https://github.com/tokimo-lab/tokimo-package-subtitle-search.git", rev = "4a9008d9f2d44889505f6f736fea71a39b6aaf1c" }
tokimo-package-iso          = { git = "https://github.com/tokimo-lab/tokimo-package-iso.git", rev = "fbd6e16" }
tower              = { version = "0.5" }
tower-http         = { version = "0.6", features = ["fs"] }
libc               = "0.2"
opendal            = { version = "0.55", features = ["services-fs"] }

[profile.release]
lto       = "thin"
opt-level = 3
strip     = "symbols"
